classified structure for folder and main code logic

--- a/src/indexes/languages/english/class-6.json
+++ b/src/indexes/languages/english/class-6.json
@@ -72,6 +72,44 @@
         "print_range": [132,138]
       }
     }
+  },
+  "class-6-term3-english.pdf": {
+    "Unit 1": {
+      "Prose: Who Owns the Water?": {
+        "pdf_range": [9, 18],
+        "print_range": [71, 80]
+      },
+      "Poem: Indian Seasons": {
+        "pdf_range": [19, 21],
+        "print_range": [81, 83]
+      },
+      "Supplementary: A Childhood in Malabar": {
+        "pdf_range": [22, 28],
+        "print_range": [84, 90]
+      }
+    },
+    "Unit 2": {
+      "Prose: That Sunday Morning": {
+        "pdf_range": [29, 43],
+        "print_range": [91, 105]
+      },
+      "Poem: A Tragic Story": {
+        "pdf_range": [44, 46],
+        "print_range": [106, 108]
+      },
+      "Supplementary: Brought to Book": {
+        "pdf_range": [47, 53],
+        "print_range": [109, 115]
+      }
+    },
+    "Unit 3": {
+      "Play: The Jungle Book": {
+        "pdf_range": [54, 67],
+        "print_range": [116, 129]
+      }
+    }
   }
 }
+
+
 
