folder structure organized

--- a/samacheer-pdf-server/data/catalogs/languages/english.json
+++ b/samacheer-pdf-server/data/catalogs/languages/english.json
@@ -13,20 +13,6 @@
     "class-9-term0-english.pdf": "1Q3BH7Hk_WhA0KXaok1bqTWN1E6UIDgzt",
     "class-10-term0-english.pdf": "1xvV-vpPWbOsixv5h4JfWYWBNa9jY18QR",
     "class-11-term0-english.pdf": "1icAVLCGZGGcNQ5GSjmMMOVJCebXCU9pD",
-    "class-12-term0-english.pdf": "1tEgqnx63x4WfV2hR2D8oJ87iFD9KnK_y",
-
-
-    "__COMMENT__": "TAMIL BOOKS (Examples)",
-
-    "class-6-term1-tamil.pdf": "PASTE_YOUR_DRIVE_ID_HERE",
-    "class-10-term0-tamil.pdf": "PASTE_YOUR_DRIVE_ID_HERE",
-
-
-    "__COMMENT__": "CORE SUBJECTS (Maths, Science, Social - Need Medium)",
-
-    "class-6-term1-maths-english-medium.pdf": "PASTE_YOUR_DRIVE_ID_HERE",
-    "class-6-term1-science-english-medium.pdf": "PASTE_YOUR_DRIVE_ID_HERE",
-    
-    "class-10-term0-maths-tamil-medium.pdf": "PASTE_YOUR_DRIVE_ID_HERE",
-    "class-10-term0-science-tamil-medium.pdf": "PASTE_YOUR_DRIVE_ID_HERE"
+    "class-12-term0-english.pdf": "1tEgqnx63x4WfV2hR2D8oJ87iFD9KnK_y"
+   
 }
